# AGPhys

./: .gitignore  README.md
skeleton/: CMakeLists.txt  CMakeLists.txt.user.18  go  readme.txt
skeleton/cmake/: PreprocessorUtils.cmake
skeleton/shader/: object.glsl  object.glsl~  particles.glsl  plane.glsl
skeleton/src/: CMakeLists.txt  collisionSystem.h  collisionsystem.cpp  main.cpp  particleSystem.cpp  particleSystem.h  raytracer.cpp  raytracer.h  renderer.cpp  renderer.h  sdl_window.cpp  sdl_window.h
skeleton/src/cuda/: cloth.cu  cloth.h  collision.h  cuda_typedefs.h  helper_math.h  interop.cu  interop.h  particle.cu  particle.h  plane.h  random.h  rigidbody.cu  rigidbody.h  sphere.cu  sphere.h  timing.cu  timing.h
skeleton/src/saiga/: camera.cpp  camera.h  config.h  controllable_camera.h
skeleton/src/saiga/geometry/: plane.h  triangle.cpp  triangle.h
skeleton/src/saiga/opengl/: objloader.h
skeleton/src/saiga/opengl/shader/: basic_shaders.cpp  shader.cpp
skeleton/src/saiga/opengl/texture/: image.cpp  image.h
skeleton/src/saiga/rendering/: material.cpp  material.h
skeleton/src/saiga/sdl/: listener.h  sdl_eventhandler.h
